# voxkit-library

./: README.md  pyproject.toml
.github/workflows/: publish.yml
voxkit/: cli.py  demo.py  detect.py  installer.py  ui.py
voxkit/registry/: __init__.py  llm.py  stt.py  tts.py
